@@ -6,8 +6,25 @@
 config EXAMPLES_PASHELLO
 	bool "Pascal \"Hello, World!\" example"
 	default n
+	depends on INTERPRETERS_PCODE
+	select INTERPRETERS_PRUN
 	---help---
 		Enable the Pascal \"Hello, World!\" example
 
 if EXAMPLES_PASHELLO
+
+config EXAMPLES_PASHELLO_VARSTACKSIZE
+	int "P-Code variable stack size"
+	default 1024
+	---help---
+		This size of the P-Code variable storage area to be allocated by the
+		P-Code runtime.
+
+config EXAMPLES_PASHELLO_STRSTACKSIZE
+	int "P-Code string stack size"
+	default 128
+	---help---
+		This size of the P-Code string stack area to be allocated by the
+		P-Code runtime.
+
 endif
