@@ -911,3 +911,6 @@
 	* apps/system/i2c/i2c_get.c:  Fix to show the updated register address on
 	  each fetch (vs. showing the same starting address each time).  From
 	  Ryan VanSickle (2014-5-8).
+	* apps/interpreters/prun and apps/include/interpreters/prun.h:  Broke out
+	  the P-code execution logic from apps/examples/pashello and moved it to
+	  these directorit where it can be used more generally (2014-5-9).
